--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
-      <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-      <title>Simbase</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">      <title>Simbase</title>
   </head>
   <body>
     <div id="app"></div>
